force-app/main/default/objects/Logged_Exception__c/Logged_Exception__c.object-meta.xml
<CustomObject>
    <label>Logged Exception</label>
    <nameField>
        <displayFormat>Ex{0000}</displayFormat>
        <label>Logged Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logged Exeptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>