force-app/main/default/objects/Logged_Exception__c/fields/Developer_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>Developer_to_Notify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer to Notify</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logged Exeptions</relationshipLabel>
    <relationshipName>Logged_Exeptions</relationshipName>
    <type>Lookup</type>
</CustomField>