force-app/main/default/objects/Logged_Exception__c/fields/Parent_Exception__c.field-meta.xml
<CustomField>
    <fullName>Parent_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Exception</label>
    <referenceTo>Logged_Exception__c</referenceTo>
    <relationshipLabel>Logged Exeptions</relationshipLabel>
    <relationshipName>Logged_Exeptions</relationshipName>
    <type>Lookup</type>
</CustomField>