force-app/main/default/objects/Logged_Exception__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Describes the type of Exception that has been logged. These values are drawn from the Exception type list that can be found in Salesforce&#39;s Apex documentation.</description>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>